RESOLVED FIXED60556
Files that load quickly sometimes won't play
https://bugs.webkit.org/show_bug.cgi?id=60556
Summary Files that load quickly sometimes won't play
Eric Carlson
Reported 2011-05-10 08:59:20 PDT
When a media file used in a <video> element loads very quickly, it is possible for the AVFoundation backend state machine to miss a state transition and think it is not loaded. <rdar://problem/9330567>
Attachments
Proposed patch. (5.02 KB, patch)
2011-05-10 09:53 PDT, Eric Carlson
darin: review+
Eric Carlson
Comment 1 2011-05-10 09:53:44 PDT
Created attachment 92970 [details] Proposed patch.
Eric Carlson
Comment 2 2011-05-10 10:11:05 PDT
Ademar Reis
Comment 3 2011-06-03 14:05:08 PDT
Revision r86163 cherry-picked into qtwebkit-2.2 with commit f0a236c <http://gitorious.org/webkit/qtwebkit/commit/f0a236c>
Note You need to log in before you can comment on or make changes to this bug.