Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp
@@ -190,7 +190,6 @@ void MediaPlayerPrivateAVFoundation::playabilityKnown()
 {
     LOG(Media, "MediaPlayerPrivateAVFoundation::playabilityKnown(%p)", this);
 
-    updateStates();
     if (m_assetIsPlayable)
         return;
 
@@ -305,7 +304,7 @@ IntSize MediaPlayerPrivateAVFoundation::naturalSize() const
 
 void MediaPlayerPrivateAVFoundation::setNaturalSize(IntSize size)
 {
-    LOG(Media, "MediaPlayerPrivateAVFoundation:sizeChanged(%p) - size = %d x %d", this, size.width(), size.height());
+    LOG(Media, "MediaPlayerPrivateAVFoundation:setNaturalSize(%p) - size = %d x %d", this, size.width(), size.height());
 
     IntSize oldSize = m_cachedNaturalSize;
     m_cachedNaturalSize = size;
@@ -505,12 +504,10 @@ void MediaPlayerPrivateAVFoundation::metadataLoaded()
 {
     m_loadingMetadata = false;
     tracksChanged();
-    updateStates();
 }
 
 void MediaPlayerPrivateAVFoundation::rateChanged()
 {
-    updateStates();
     m_player->rateChanged();
 }
 
@@ -518,7 +515,6 @@ void MediaPlayerPrivateAVFoundation::loadedTimeRangesChanged()
 {
     m_cachedLoadedTimeRanges = 0;
     m_cachedMaxTimeLoaded = 0;
-    updateStates();
 
     // For some media files, reported duration is estimated and updated as media is loaded
     // so report duration changed when the estimate is upated.
@@ -727,9 +723,11 @@ void MediaPlayerPrivateAVFoundation::dispatchNotification()
         break;
     case Notification::ItemSeekableTimeRangesChanged:
         seekableTimeRangesChanged();
+        updateStates();
         break;
     case Notification::ItemLoadedTimeRangesChanged:
         loadedTimeRangesChanged();
+        updateStates();
         break;
     case Notification::ItemPresentationSizeChanged:
         sizeChanged();
@@ -745,6 +743,7 @@ void MediaPlayerPrivateAVFoundation::dispatchNotification()
         updateStates();
         break;
     case Notification::PlayerRateChanged:
+        updateStates();
         rateChanged();
         break;
     case Notification::PlayerTimeChanged:
@@ -755,8 +754,10 @@ void MediaPlayerPrivateAVFoundation::dispatchNotification()
         break;
     case Notification::AssetMetadataLoaded:
         metadataLoaded();
+        updateStates();
         break;
     case Notification::AssetPlayabilityKnown:
+        updateStates();
         playabilityKnown();
         break;
     case Notification::None:
